--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Generate
-      run: make generate
+    - name: Build
+      run: make build
 
     - name: Run check
       run: make lint
