--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -3,8 +3,8 @@ name: Makefile CI
 on:
   push:
     branches: [ "ci" ]
-#  pull_request:
-#    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Build
-      run: make build
+      run: make
 
 #   TODO fix linter warn
 #    - name: Run check
