fix linter action

--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -17,6 +17,9 @@ jobs:
     - name: Run test
       run: make test
 
+    - name: Run lint
+      run: make lint
+
   golangci:
     name: lint
     runs-on: ubuntu-latest
